--- a/cheerspal/src/main/resources/templates/login_success.html
+++ b/cheerspal/src/main/resources/templates/login_success.html
@@ -18,7 +18,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
         <title>Cheers Pal</title>
     </head>
     <body>
@@ -34,14 +34,26 @@
                     
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         
-                        <li class="nav-item">    <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login/logout">
-                            <i class="bi bi-person-fill-add"></i> Log out</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">
-                            <i class="bi bi-person-fill-add"></i> Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post_event">
-                            <i class="bi bi-card-list"></i> Post</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">
-                            <i class="bi bi-headset"></i> Contact</a></li>
+                        <!-- Log out link (visible when logged in) -->
+                        <li class="nav-item" th:if="${session.loggedIn}">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login/logout">
+                                <i class="bi bi-box-arrow-right"></i> Log out
+                            </a>
+                        </li>
+
+                        <!-- Log in link (visible when not logged in) -->
+                        <li class="nav-item" th:unless="${session.loggedIn}">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">
+                                <i class="bi bi-box-arrow-in-right"></i> Log in
+                            </a>
+                        </li>
+
+                        <!-- Sign Up (always visible) -->
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">
+                                <i class="bi bi-person-fill-add"></i> Sign Up
+                            </a>
+                        </li>
                     </ul>
                     
                 </div>
