--- a/cheerspal/src/main/resources/templates/post_event.html
+++ b/cheerspal/src/main/resources/templates/post_event.html
@@ -17,79 +17,108 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
         <title>Cheers Pal - Post</title>
     </head>
-<body>
-    <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
-        <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="Index">Cheers Pal</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
+    <body>
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+            <div class="container px-4 px-lg-5">
+                <a class="navbar-brand" href="Index">Cheers Pal</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
 
-                <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                    
-                    <li class="nav-item">    <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login/logout">
-                        <i class="bi bi-person-fill-add"></i> Log out</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">
-                        <i class="bi bi-person-fill-add"></i> Sign Up</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post_event">
-                        <i class="bi bi-card-list"></i> Post</a></li>
-                    <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">
-                        <i class="bi bi-headset"></i> Contact</a></li>
-                </ul>
+                    <ul class="navbar-nav ms-auto py-4 py-lg-0">                    
+                        <!-- Log out link (visible when logged in) -->
+                        <li class="nav-item" th:if="${session.loggedIn}">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login/logout">
+                                <i class="bi bi-box-arrow-right"></i> Log out
+                            </a>
+                        </li>
+                        <!-- Log in link (visible when not logged in) -->
+                        <li class="nav-item" th:unless="${session.loggedIn}">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/login">
+                                <i class="bi bi-box-arrow-in-right"></i> Log in
+                            </a>
+                        </li>
+                        <!-- Sign Up (always visible) -->
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">
+                                <i class="bi bi-person-fill-add"></i> Sign Up
+                            </a>
+                        </li>
+                        <!-- Post Event (redirect to login when logged out) -->
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" 
+                               th:href="${session.loggedIn} ? '/post_event' : '/login'">
+                                <i class="bi bi-card-list"></i> Post
+                            </a>
+                        </li>
+                        <!-- Contact (always visible) -->
+                        <li class="nav-item">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">
+                                <i class="bi bi-headset"></i> Contact
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
 
             </div>
-            
-        </div>
-    </nav>
-    <!-- Page Header-->
-   <header class="masthead" th:style="|background-image: url('@{/img/home-bg.jpg}')|">
-        <div class="container position-relative px-4 px-lg-5">
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="site-heading">
-                        <h1>Start up a new Event</h1>
-                        <span class="subheading">What would you like to do?</span>
+        </nav>
+        <!-- Page Header-->
+       <header class="masthead" th:style="|background-image: url('@{/img/home-bg.jpg}')|">
+            <div class="container position-relative px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-md-10 col-lg-8 col-xl-7">
+                        <div class="site-heading">
+                            <h1>Start up a new Event</h1>
+                            <span class="subheading">What would you like to do?</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-     <!-- Main Content-->
-        <script async src="https://cse.google.com/cse.js?cx=359179be3972f42df"></script>
-        <div class="gcse-search"></div>
-        <div>
-            <p th:if="${session.loggedInUser != null}" >
-                Hello, <span th:text="${session.loggedInUser.name ?: 'Guest'}"></span>!
-            </p>
-        </div>
-        <div th:if="${session.loggedInUser == null}">
-            <p>Please <a href="/login">login</a> to continue.</p>
-        </div>
-        <h1>Create an Event</h1>
-    <form th:action="@{/post_event}" method="post" th:object="${event}">
-        <div class="form-group">
-            <label for="title">Event Title</label>
-            <input type="text" id="title" th:field="*{title}" class="form-control" required>
-        </div>
+        </header>
+         <!-- Main Content-->
+            <script async src="https://cse.google.com/cse.js?cx=359179be3972f42df"></script>
+            <div class="gcse-search"></div>
+            <div>
+                <p th:if="${session.loggedInUser != null}" >
+                    Hello, <span th:text="${session.loggedInUser.name ?: 'Guest'}"></span>!
+                </p>
+            </div>
+            <div th:if="${session.loggedInUser == null}">
+                <p>Please <a href="/login">login</a> to continue.</p>
+            </div>
+            <h1>Create an Event</h1>
 
-        <div class="form-group">
-            <label for="description">Event Description</label>
-            <textarea id="description" th:field="*{description}" class="form-control" required></textarea>
-        </div>
+            <form th:action="@{/post_event}" method="post" th:object="${event}">
+                <input type="hidden" name="userId" th:value="${session.loggedInUser.id}">
+                <div class="form-group">
+                    <label for="title">Event Title</label>
+                    <input type="text" id="title" th:field="*{title}" class="form-control" required>
+                </div>
 
-        <div class="form-group">
-            <label for="date">Event Date</label>
-            <input type="date" id="date" th:field="*{date}" class="form-control" required>
-        </div>
+                <div class="form-group">
+                    <label for="description">Event Description</label>
+                    <textarea id="description" th:field="*{description}" class="form-control" required></textarea>
+                </div>
 
-        <button type="submit" class="btn btn-primary">Post Event</button>
-    </form>
+                <div class="form-group">
+                    <label for="date">Event Date</label>
+                    <input type="date" id="date" th:field="*{date}" class="form-control" required>
+                </div>
 
-</body>
+                <div class="form-group">
+                    <label for="city">City</label>
+                    <input type="text" id="city" name="city" placeholder="City" class="form-control" required>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Post Event</button>
+            </form>
+
+    </body>
 </html>
