--- a/cheerspal/src/main/resources/templates/login_success.html
+++ b/cheerspal/src/main/resources/templates/login_success.html
@@ -149,7 +149,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">Copyright &copy; Cheers Pal 2024. Connecting people, creating memories</div>
                     </div>
                 </div>
             </div>
