--- a/cheerspal/src/main/resources/templates/register.html
+++ b/cheerspal/src/main/resources/templates/register.html
@@ -140,7 +140,7 @@
                             <textarea class="form-control" id="selfIntroduction" th:field="*{selfIntroduction}" placeholder="Tell us about yourself..." style="height: 12rem" data-sb-validations="required"></textarea>
                                 <label for="selfIntroduction">Self Introduction</label>
                                 <div class="invalid-feedback">Self Introduction is required.</div>
-
+                            </div>
                             <!-- Terms and Conditions -->
                             <div class="form-check mb-3">
                                 <input class="form-check-input" type="checkbox" id="terms" th:field="*{terms}" data-sb-validations="required"/>
