--- a/cheerspal/src/main/resources/templates/login.html
+++ b/cheerspal/src/main/resources/templates/login.html
@@ -117,11 +117,17 @@
                                 <label for="password">Password</label>
                                 <div class="invalid-feedback">Password is required.</div>
                             </div>
-
+                             <!-- Error Message -->
+                             <div class="text-danger mb-3" th:if="${error != null}" th:text="${error}">
+                                 
+                             </div>
                             <!-- Submit Button -->
                             <button class="btn btn-primary text-uppercase w-100" type="submit">Login</button>
                         </form>
-
+                            <!-- Register Link -->
+                            <p class="mt-3 text-center">
+                                Don't have an account? <a href="/register">Register here</a>.
+                            </p>
                     </div>
                 </div>
             </div>
