--- a/cheerspal/src/main/resources/templates/user_details.html
+++ b/cheerspal/src/main/resources/templates/user_details.html
@@ -43,10 +43,18 @@
                                 <i class="bi bi-box-arrow-in-right"></i> Log in
                             </a>
                         </li>
-                        <!-- Sign Up (always visible) -->
-                        <li class="nav-item">
+                        <!-- Sign Up link (visible when not logged in) -->
+                        <li class="nav-item" th:unless="${session.loggedIn}">
                             <a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">
                                 <i class="bi bi-person-fill-add"></i> Sign Up
+                            </a>
+                        </li>
+
+                        <!-- My Profile link (visible when logged in) -->
+                        <li class="nav-item" th:if="${session.loggedInUser != null}">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" 
+                               th:href="@{/user_details/{id}(id=${session.loggedInUser.id})}">
+                                <i class="bi bi-person-fill"></i> My Profile
                             </a>
                         </li>
                         <!-- Post Event (redirect to login when logged out) -->
@@ -81,7 +89,15 @@
         </header>
         <!-- Main Content-->
         <script async src="https://cse.google.com/cse.js?cx=359179be3972f42df"></script>
-        <div class="gcse-search"></div>
+            <div class="gcse-search"></div>
+        <div>
+            <p th:if="${session.loggedInUser != null}" >
+                Hello, <span th:text="${session.loggedInUser.name ?: 'Guest'}"></span>!
+            </p>
+        </div>
+        <div th:if="${session.loggedInUser == null}">
+            <p>Please <a href="/login">login</a> to continue.</p>
+        </div>
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
@@ -101,7 +117,13 @@
                                 <strong>About:</strong><br>
                                 <span th:text="${user.selfIntroduction}">Introduction</span>
                             </p>
-
+                            <!-- Only if the logged-in user is viewing their own profile -->
+                            <div th:if="${user != null and loggedInUser != null and user.id == loggedInUser.id}">
+                                <a href="/profile/{id}" th:href="@{/profile/{id}(id=${user.id})}" class="btn btn-primary">
+                                    
+                                    <i class="bi bi-pencil-square"></i> Edit Profile
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
