--- a/cheerspal/src/main/resources/templates/contact.html
+++ b/cheerspal/src/main/resources/templates/contact.html
@@ -44,10 +44,17 @@
                                 <i class="bi bi-box-arrow-in-right"></i> Log in
                             </a>
                         </li>
-                        <!-- Sign Up (always visible) -->
-                        <li class="nav-item">
+                        <!-- Sign Up link (visible when not logged in) -->
+                        <li class="nav-item" th:unless="${session.loggedIn}">
                             <a class="nav-link px-lg-3 py-3 py-lg-4" href="/register">
                                 <i class="bi bi-person-fill-add"></i> Sign Up
+                            </a>
+                        </li>
+                        <!-- My Profile link (visible when logged in) -->
+                        <li class="nav-item" th:if="${session.loggedInUser != null}">
+                            <a class="nav-link px-lg-3 py-3 py-lg-4" 
+                               th:href="@{/user_details/{id}(id=${session.loggedInUser.id})}">
+                                <i class="bi bi-person-fill"></i> My Profile
                             </a>
                         </li>
                         <!-- Post Event (redirect to login when logged out) -->
